; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/xmon/extr_ppc-opc.c_insert_ls.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/xmon/extr_ppc-opc.c_insert_ls.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PPC_OPCODE_POWER4 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"illegal L operand value\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64, i32, i8**)* @insert_ls to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @insert_ls(i64 %0, i64 %1, i32 %2, i8** %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8**, align 8
  %10 = alloca i64, align 8
  store i64 %0, i64* %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i8** %3, i8*** %9, align 8
  %11 = load i64, i64* %6, align 8
  %12 = lshr i64 %11, 1
  %13 = and i64 %12, 1023
  %14 = icmp eq i64 %13, 598
  br i1 %14, label %15, label %31

15:                                               ; preds = %4
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* @PPC_OPCODE_POWER4, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  %20 = zext i1 %19 to i64
  %21 = select i1 %19, i32 2, i32 1
  %22 = sext i32 %21 to i64
  store i64 %22, i64* %10, align 8
  %23 = load i64, i64* %7, align 8
  %24 = load i64, i64* %10, align 8
  %25 = icmp sgt i64 %23, %24
  br i1 %25, label %26, label %30

26:                                               ; preds = %15
  %27 = call i8* @_(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %28 = load i8**, i8*** %9, align 8
  store i8* %27, i8** %28, align 8
  %29 = load i64, i64* %6, align 8
  store i64 %29, i64* %5, align 8
  br label %37

30:                                               ; preds = %15
  br label %31

31:                                               ; preds = %30, %4
  %32 = load i64, i64* %6, align 8
  %33 = load i64, i64* %7, align 8
  %34 = and i64 %33, 3
  %35 = shl i64 %34, 21
  %36 = or i64 %32, %35
  store i64 %36, i64* %5, align 8
  br label %37

37:                                               ; preds = %31, %26
  %38 = load i64, i64* %5, align 8
  ret i64 %38
}

declare dso_local i8* @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
